--- a/show_menu/templates/core/menu.html
+++ b/show_menu/templates/core/menu.html
@@ -1,6 +1,6 @@
 <ul id="1" class="tree">
 <li>
-    <span onclick="toggleChildren(this)">
+    <span class="title-menu" onclick="toggleChildren(this)">
         {% if main_menu.url %}
             <a href="{{ main_menu.url }}">{{ main_menu.name }}</a>
         {% else %}
