--- a/show_menu/templates/base.html
+++ b/show_menu/templates/base.html
@@ -3,21 +3,22 @@
   <head>
     {% load static %}
     {% load menu %}
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "fav.png" %}">
     <link rel="stylesheet" href="{% static "css/menu.css" %}">
-
     <title>{% block title %}Menu{% endblock title %}</title>
   </head>
   <body>
-    <div class="left">
-    {% addmenu "Test menu 1" %}
-    {% addmenu "Test menu 3" %}
-
-    {% addmenu "Menu" %}
+    {% for message in messages %}
+      <div hidden id="alertMessage" role="alert">{{ message }}</div>
+    {% endfor %}
+    <div class="sidebar">
+      <a href={% url "app:create_test_menu" %}><button>add menu</button></a>
+      <br><br>
+      <a href={% url "app:delete_test_menu" %}><button>delete last menu</button></a>
+      {% addmenu "Menu 1" %}
+      <div id="include"></div>
     </div>
     <main class="right">
       {% block content %}
