--- a/show_menu/templates/base.html
+++ b/show_menu/templates/base.html
@@ -2,24 +2,17 @@
 <html lang="ru">
   <head>
     {% load static %}
-    {% load menu %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "fav.png" %}">
     <link rel="stylesheet" href="{% static "css/menu.css" %}">
     <title>{% block title %}Menu{% endblock title %}</title>
-  </head>
-  <body>
     {% for message in messages %}
       <div hidden id="alertMessage" role="alert">{{ message }}</div>
     {% endfor %}
-    <div class="sidebar">
-      <a href={% url "app:create_test_menu" %}><button>add menu</button></a>
-      <br><br>
-      <a href={% url "app:delete_test_menu" %}><button>delete last menu</button></a>
-      {% addmenu "Menu 1" %}
-      <div id="include"></div>
-    </div>
+  </head>
+  <body>
+    {% include "includes/sidebar.html" %}
     <main class="right">
       {% block content %}
         <h1>No content...</h1>
